<resources>
    <string name="app_name">Nuovo regime forfetario agevolato</string>
    <string name="valore_netto_della_fattura">Valore netto della fattura</string>
    <string name="calcola">Calcola</string>
    <string name="c_redditivita">% di redd.tà</string>
    <string name="_67_00">67.00</string>
    <string name="contr_inps">Quota INPS da versare:</string>
    <string name="_25_72">25.72</string>
    <string name="reddito">Imponibile INPS:</string>
    <string name="base_imponibile">Base imponibile:</string>
    <string name="coefficiente_redditivit">Coefficiente % \nRedditività</string>
    <string name="contribuzione_inps">Coefficiente % \nInps</string>
    <string name="coefficiente_tassazione">Coefficiente % \nTassazione</string>
    <string name="_5_00">5.00</string>
    <string name="percentage_sign">%</string>
    <string name="euro__sign">€</string>
    <string name="quota_tassazione_da_versare">Quota Tassazione da versare:</string>
    <string name="imponibile_tassabile">Imponibile Tassabile:</string>
    <string name="info_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis felis quis diam porta pulvinar. Donec ut tempus nunc, non feugiat elit. Maecenas vel ligula elit. Praesent vel venenatis leo, at ornare arcu. Vestibulum vitae aliquam est. Etiam eu pretium eros, eu mattis est. Nulla facilisi. Phasellus purus massa, vestibulum sit amet hendrerit quis, faucibus nec neque. Morbi iaculis sem sed lacus vulputate bibendum. Morbi fermentum egestas sapien, ac imperdiet erat viverra vel. Suspendisse laoreet laoreet eros. Quisque luctus et neque ut posuere. Pellentesque ut lectus sagittis, vulputate nunc vel, mollis elit. Sed dolor sem, laoreet at varius sed, eleifend et sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam sit amet urna et tellus pellentesque posuere. Curabitur fermentum, arcu eu placerat elementum, purus mauris pretium velit, a vulputate urna augue ac dolor. Aenean non elit eu arcu iaculis mollis. Morbi convallis maximus lacus, at aliquet quam commodo eget. Fusce vitae consectetur purus. Praesent nunc urna, tristique ac risus id, consectetur pharetra lacus. Sed at velit eu metus sodales dictum ut tempus odio. Duis sed sagittis lectus, non posuere ex. Duis ultricies augue est, sed posuere eros fringilla in. Fusce sapien erat, varius nec luctus in, egestas a risus. Nullam vel mi sed metus lobortis euismod.</string>
    <string name="info_page_title">Titolo della pagina</string>
</resources>
