<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true"
    tools:context="pw.costantini.rdm.Main">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/input_fatturato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/valore_netto_della_fattura"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/euro_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/euro__sign"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_fatturato"
        app:layout_constraintLeft_toRightOf="@+id/input_fatturato" />

    <TextView
        android:id="@+id/label_coeff_redd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/coefficiente_redditivit"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/label_perc_inps"
        app:layout_constraintTop_toBottomOf="@+id/input_fatturato" />

    <TextView
        android:id="@+id/label_perc_inps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribuzione_inps"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_coeff_redd"
        app:layout_constraintLeft_toRightOf="@+id/label_coeff_redd"
        app:layout_constraintRight_toLeftOf="@+id/label_tassazione" />

    <TextView
        android:id="@+id/label_tassazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coefficiente_tassazione"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_perc_inps"
        app:layout_constraintLeft_toRightOf="@+id/label_perc_inps"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/input_c_redd"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_67_00"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintLeft_toLeftOf="@+id/label_coeff_redd"
        app:layout_constraintTop_toBottomOf="@+id/label_coeff_redd" />

    <TextView
        android:id="@+id/percent_symbol_redd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/percentage_sign"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_c_redd"
        app:layout_constraintLeft_toRightOf="@+id/input_c_redd" />

    <EditText
        android:id="@+id/input_inps"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_25_72"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/percent_symbol_redd"
        app:layout_constraintLeft_toLeftOf="@+id/label_perc_inps" />

    <TextView
        android:id="@+id/percent_symbol_inps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/percentage_sign"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_inps"
        app:layout_constraintLeft_toRightOf="@+id/input_inps" />

    <EditText
        android:id="@+id/input_tassazione"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_5_00"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/percent_symbol_inps"
        app:layout_constraintLeft_toLeftOf="@+id/label_tassazione" />

    <TextView
        android:id="@+id/percent_symbol_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/percentage_sign"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_tassazione"
        app:layout_constraintLeft_toRightOf="@+id/input_tassazione" />

    <TextView
        android:id="@+id/label_reddito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/reddito"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/input_c_redd"
        app:layout_constraintTop_toBottomOf="@+id/input_c_redd" />

    <TextView
        android:id="@+id/output_reddito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_reddito"
        app:layout_constraintRight_toRightOf="@+id/label_tassazione" />

    <TextView
        android:id="@+id/label_reddito_imp_tass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/imponibile_tassabile"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/label_reddito"
        app:layout_constraintTop_toBottomOf="@+id/label_reddito" />

    <TextView
        android:id="@+id/output_imp_tassabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_reddito_imp_tass"
        app:layout_constraintRight_toRightOf="@+id/output_reddito" />

    <TextView
        android:id="@+id/label_contribuiti_inps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/contr_inps"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/label_reddito_imp_tass"
        app:layout_constraintTop_toBottomOf="@+id/label_reddito_imp_tass" />

    <TextView
        android:id="@+id/output_contributi_inps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_contribuiti_inps"
        app:layout_constraintRight_toRightOf="@+id/output_imp_tassabile" />

    <TextView
        android:id="@+id/label_tass_vers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quota_tassazione_da_versare"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/label_contribuiti_inps"
        app:layout_constraintTop_toBottomOf="@+id/label_contribuiti_inps" />

    <TextView
        android:id="@+id/output_tasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_tass_vers"
        app:layout_constraintRight_toRightOf="@+id/output_contributi_inps" />

    <TextView
        android:id="@+id/label_netto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Ti rimangono:"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/label_tass_vers"
        app:layout_constraintTop_toBottomOf="@+id/label_tass_vers" />

    <TextView
        android:id="@+id/output_netto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_netto"
        app:layout_constraintRight_toRightOf="@+id/output_tasse" />

    <Button
        android:id="@+id/btn_calcola"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:onClick="calcola"
        android:text="@string/calcola"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
